<resources>
    <string name="app_name">Formula Island</string>
    <string name="shop_now">Shop Now</string>
    <string name="box">Box</string>
    <string name="wear">WEAR</string>
    <string name="the">THE</string>
    <string name="speed">SPEED</string>
    <string name="formula_island">Formula Island</string>
    <string name="search_products">Search products...</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="product_title">Product Title</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="check_out">Check Out</string>
    <string name="remember_my_choice">Remember my Choice</string>
    <string name="your_cart">Your Cart</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="no_results_found">No results found.</string>
    <string name="total">Total: $0.00</string>
    <string name="choose_quantity">Choose Quantity:</string>
    <string name="order">Order:</string>
    <string name="and_always_remember">And always remember</string>
    <string name="forza_ferrari">FORZA FERRARI</string>
    <string name="all">All</string>
    <string name="ferrari">Ferrari</string>
    <string name="mercedes">Mercedes</string>
    <string name="red_bull">Red Bull</string>
    <string name="mclaren">McLaren</string>
    <string name="aston_martin">Aston Martin</string>
    <string name="aston">Aston</string>
    <string name="bulls">Bull</string>
    <string name="red_nbull">Red\nBull</string>
    <string name="mc_nlaren">Mc\nLaren</string>
    <string name="aston_nmartin">Aston\nMartin</string>
</resources>