<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#aa132b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cart2" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="45dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/edSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/search_products"
                android:paddingHorizontal="12dp"
                android:textColor="#000000"
                android:textSize="14sp" />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#aa132b"
            android:contentDescription="@string/search"
            android:src="@android:drawable/ic_menu_search" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:srcCompat="@drawable/banner2" />

    <RadioGroup
        android:id="@+id/rgTeams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="11sp"/>

        <RadioButton
            android:id="@+id/rbFerrari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ferrari"
            android:textSize="11sp"/>

        <RadioButton
            android:id="@+id/rbMercedes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercedes"
            android:textSize="11sp"/>

        <RadioButton
            android:id="@+id/rbRedBull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_nbull"
            android:textSize="11sp"/>

        <RadioButton
            android:id="@+id/rbMcLaren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mc_nlaren"
            android:textSize="11sp"/>

        <RadioButton
            android:id="@+id/rbAstonMartin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aston_nmartin"
            android:textSize="11sp"/>
    </RadioGroup>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/rgTeams">

        <ListView
            android:id="@+id/lvProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>